--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="./css/estilos.css">
+
   </head>
   <body>
 
     <h1>Bizcochuelo esponjoso casero</h1>
+
     <img src="https://www.clarin.com/img/2020/06/26/SbWjIlvtu_720x0__1.jpg" alt="">
+    
     <br>
     <h2>Ingredientes.</h2>
 
