--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
+<head>
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="./css/estilos.css">
@@ -8,44 +6,91 @@
   </head>
   <body>
 
-    <h1>Bizcochuelo esponjoso casero</h1>
+    <header>
+      <h1>Bizcochuelo esponjoso casero</h1>
+    </header>
+
+    <br>
+<br>
+<h3>Más recetas.</h3>
+    <nav>
+    <a href="https://www.paulinacocina.net/bizcochuelo-marmolado/28289"target="_blank">Bizcochuelo marmolado.</a>
+<a href="https://cocinerosargentinos.com/postres/bizcochuelo-de-chocolate"target="_blank">Bizcochuelo de chocolate.</a>
+<a href="https://www.paulinacocina.net/bizcocho-de-naranja/30446"target="_blank">Bizcochuelo de naranja.</a>
+<a href="https://cookpad.com/ar/recetas/16169113"target="_blank">Bizcochuelo de banana.</a>
+    </nav>
+
+    <br>
+<br>
+
 
     <img src="https://www.clarin.com/img/2020/06/26/SbWjIlvtu_720x0__1.jpg" alt="">
-    
+
+<section>
+  <h2>Ingredientes.</h2>
+
+  <ul>
+    <li> 1kg Harina Leudante</li>
+    <li>1 Taza de leche</li>
+    <li>1 Taza de azúcar</li>
+    <li>Media taza de aceite</li>
+    <li>2 Huevos</li>
+    <li>Esecencia de vainilla</li>
+    <li>Ralladura de limón o naranja (opcional)</li>
+
+
+  </ul>
+  <br>
+  <h2>Preparación</h2>
+
+  <ol>
+  <li>Batir los huevos hasta generar burbujas. Luego agregar la azúcar y seguir batiendo. </li>
+  <li>Agregar la leche, mezclar, añadir el aceite y revolver.</li>
+  <li>Agregar lentamente la harina leudante y batir.</li>
+  <li>Una vez hecha la masa homogénea agregar esencia de vainilla y ralladura de limón, volver a revolver.</li>
+  <li>En un molde enmantecar y harinar, luego colocar la mezcla y llevar al horno entre 30 y 60 minutos (revisar cada tanto que no se queme). Y listo, ya tenés tu bizcochuelo para disfrutar con los mates.</li>
+  </ol>
+</section>
+
     <br>
-    <h2>Ingredientes.</h2>
 
-    <ul>
-      <li> 1kg Harina Leudante</li>
-      <li>1 Taza de leche</li>
-      <li>1 Taza de azúcar</li>
-      <li>Media taza de aceite</li>
-      <li>2 Huevos</li>
-      <li>Esecencia de vainilla</li>
-      <li>Ralladura de limón o naranja (opcional)</li>
+<section>
+  <img src="https://imag.bonviveur.com/interior-del-bizcochuelo-casero.jpg" alt="">
 
-
-    </ul>
-    <br>
-    <h2>Preparación</h2>
-
-    <ol>
-    <li>Batir los huevos hasta generar burbujas. Luego agregar la azúcar y seguir batiendo. </li>
-    <li>Agregar la leche, mezclar, añadir el aceite y revolver.</li>
-    <li>Agregar lentamente la harina leudante y batir.</li>
-    <li>Una vez hecha la masa homogénea agregar esencia de vainilla y ralladura de limón, volver a revolver.</li>
-    <li>En un molde enmantecar y harinar, luego colocar la mezcla y llevar al horno entre 30 y 60 minutos (revisar cada tanto que no se queme). Y listo, ya tenés tu bizcochuelo para disfrutar con los mates.</li>
-    </ol>
-
-    <img src="https://imag.bonviveur.com/interior-del-bizcochuelo-casero.jpg" alt="">
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/yb1XQukPDjQ?si=g4QcCQHxS9yT41rM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/yb1XQukPDjQ?si=g4QcCQHxS9yT41rM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52544.22102070332!2d-58.458102578320286!3d-34.60381219999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac42b137c85%3A0x4fb14955717b3b42!2sConfiter%C3%ADa%20La%20Pasta%20Frola!5e0!3m2!1ses-419!2sar!4v1760560363906!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
+</section>
+<br>
+<br>
+
+<div class="whatsapp-container">
+  <a href="https://wa.me/5491139009518?text=¡Hola!%20Vi%20tu%20página%20web%20y%20quiero%20más%20info."
+     target="_blank" class="whatsapp-float">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg"
+         alt="WhatsApp" class="whatsapp-icon">
+  </a>
+</div>
+
+
+
+<br>
+<footer>
+  <p>Seguinos en nuestras redes:</p>
+  <a href="https://www.instagram.com"target="_blank"><img src="./imagenes/insta.jpg" alt="instagram"></a>
+
+  <a href="https://www.tiktok.com" target="_blank">
+  <img src="./imagenes/tiktok.jpg" alt="tiktok">
+  </a>
+  <a href="https://www.youtube.com" target="_blank">
+    <img src="./imagenes/youtube.jpg" alt="youtube">
+  </a>
+</footer>
 
 
 
   </body>
+</html>
 </html>
